Fix image scaling on mobile for all themes
Fixes #14

--- a/application/theme/huntershouse.dk/style/style.css
+++ b/application/theme/huntershouse.dk/style/style.css
@@ -353,8 +353,11 @@ h1 {
         position: static;
         width: 100%;
     }
-    #text img {
+    #text img, #text iframe, #text video, #text audio {
         max-width: 100%;
+    }
+    #text img, #text video {
+        height: auto;
     }
     .open {
         font-weight: bold;
